# ArmorDetector_pkg

./: CMakeLists.txt
src/armor_detector_pkg/: package.xml
src/armor_detector_pkg/launch/: test.launch.py
src/armor_detector_pkg/resource/: camera_info.yaml  cascade.xml  num1cascade.xml  num2cascade.xml  num3cascade.xml  num4cascade.xml
src/armor_detector_pkg/src/: aim_predictor_node.cpp  image_processer_node.cpp  number_recognizer_node.cpp  video_capturer_node.cpp  video_player_node.cpp
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: Point2f.msg
